tests/baselines/reference/symbolType15.errors.txt
symbolType15.ts(5,1): error TS2322: Type 'Symbol' is not assignable to type 'symbol'.
  'symbol' is a primitive, but 'Symbol' is a wrapper object. Prefer using 'symbol' when possible.


==== symbolType15.ts (1 errors) ====
    var sym: symbol;
    var symObj: Symbol;
    
    symObj = sym;
    sym = symObj;
    ~~~
!!! error TS2322: Type 'Symbol' is not assignable to type 'symbol'.
!!! error TS2322:   'symbol' is a primitive, but 'Symbol' is a wrapper object. Prefer using 'symbol' when possible.